--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,8 +106,7 @@ pre {
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  max-width: 100%;
 }
 
 body {
@@ -273,8 +272,42 @@ foreignObject {
   }
 }
 
+table {
+  border-collapse: collapse;
+  margin-bottom: calc(2 * var(--intersection-spacing));
+  width: 98%;
+  border-radius: 4px;
+  border: 1px solid var(--foreground-dim);
+
+  thead {
+    background-color: var(--background-dim);
+    color: var(--foreground-dim);
+  }
+
+  tbody tr {
+    &:nth-child(1) {
+      background-color: var(--background);
+    }
+    &:nth-child(even) {
+      background-color: var(--background-dim);
+    }
+    &:hover {
+      background-color: var(--background-dim);
+    }
+  }
+
+  th,
+  td {
+    padding: calc(0.5 * var(--intersection-spacing))
+      calc(1 * var(--intersection-spacing));
+    text-align: left;
+    border-right: 1px solid var(--foreground-dim);
+    border-bottom: 1px solid var(--foreground-dim);
+  }
+}
+
 @media screen and (min-width: 720px) {
-  .navBar {
+  .navbar {
     margin-inline: auto;
     width: 90%;
   }
