--- a/src/components/molecules/NavBar/NavBar.module.css
+++ b/src/components/molecules/NavBar/NavBar.module.css
@@ -1,11 +1,17 @@
-.navBar {
+.navBarContainer {
   background-color: var(--background);
-  display: flex;
-  justify-content: space-between;
-  margin-block: 1rem;
-  width: var(--page-width);
-  margin-inline: auto;
-  flex-flow: column;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+
+  .navBar {
+    display: flex;
+    width: var(--page-width);
+    padding-block: 1rem;
+    margin-inline: auto;
+    justify-content: space-between;
+    flex-flow: column;
+  }
 
   a {
     text-decoration: none;
@@ -34,6 +40,10 @@
   margin-block: auto;
   padding-left: 0;
 
+  li {
+    margin-block: auto;
+  }
+
   a:hover {
     text-decoration: underline;
     text-decoration-color: gold;
@@ -43,7 +53,7 @@
 @media screen and (min-width: 720px) {
   .navBar {
     align-items: center;
-    flex-flow: row;
+    flex-flow: row !important;
   }
 
   .navOptions {
